--- a/StudentManagerWPF/StudentManagerWPF/InsertDataWindow.xaml
+++ b/StudentManagerWPF/StudentManagerWPF/InsertDataWindow.xaml
@@ -64,7 +64,7 @@
                         </LinearGradientBrush>
                     </Button.Background> Modifier
                 </Button>
-                <Button x:Name="Supprimer" Margin="10,0,0,0" Width="100" >
+                <Button x:Name="Supprimer" Margin="10,0,0,0" Width="100" Click="Supprimer_Click" >
                     <Button.Background>
                         <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                             <GradientStop Color="Black" Offset="0"/>
